Fixed the Alignments and Added Improved the UX

--- a/style.css
+++ b/style.css
@@ -1,19 +1,40 @@
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100&family=Open+Sans&display=swap');
-.nev1 .nev2{
-    justify-content: end;
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100&family=Open+Sans&family=Roboto:ital@1&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Gulzar&display=swap");
+.nev1 .nev2 {
+  justify-content: end;
 }
 
-body{
+/* body{
     font-family: 'Roboto', sans-serif;
-}
+} */
 
 .navbar-light .navbar-nav .active > .nav-link {
   color: hotpink;
 }
 
-.ban{
+ul.navbar-nav.justify-content-end {
+  margin: 0px 85px 0 0;
+}
+
+.navbar-brand {
+  margin-left: 88px;
+  font-family: "Gulzar", serif;
+  font-size: 25px;
+  font-weight: 500;
+  text-transform: uppercase;
+  padding-top: 8px;
+}
+
+#main-menu {
+  background-color: #f8f9fa;
+  margin: 0;
+  max-width: 100%;
+  box-shadow: 6px 3px 8px 2px #e1dfdfe8;
+}
+
+.ban {
   background-image: url(./mike-erskine-S_VbdMTsdiA-unsplash.jpg);
-  height: 100%;
+  height: 90vh;
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -49,106 +70,160 @@ body{
   height: 150px;
 }
 
-.skill{
-  border-bottom: 5px solid rgba(255, 0, 0, 0.521);
+.skill {
+  height: 5px;
+  width: 80px;
+}
+.bars {
+  background-color: darkred;
 }
 
-.percen{
+.percen {
   background-image: linear-gradient(grey, whitesmoke);
 }
 
-.htm{
+.htm {
   display: flex;
   justify-content: space-between;
 }
 
-.pro{
-    height: 5px;
+.pro {
+  height: 5px;
 }
-.barcol{
-    background-color: hotpink;
+.barcol {
+  background-color: hotpink;
 }
 
 .happy-clients {
-    font-size: 30px;
-    font-weight: 500;
+  font-size: 30px;
+  font-weight: 500;
 }
 
-.happy-text{
-    margin-left: 40px;
+.happy-text {
+  margin-left: 40px;
 }
 
-.resume{
-    border-bottom: 5px solid rgba(255, 0, 0, 0.521);
-  }
-
-  .menu{
-    border-radius: 15px;
-    background-color: whitesmoke;
-    margin-left: 150px;
-    padding: 10px 4px 4px 16px;
-  }
-
-  .slides {
-    display: flex;
-    /* background-color: #789edf; */
-    height: 450px;
-    align-items: center;
-    background-color: transparent;
-    border: none;
+.address {
+  line-height: 50px;
 }
 
-#dots{
-    background-color: black;
+/* .resume {
+  border-bottom: 5px solid rgba(255, 0, 0, 0.521);
+} */
+
+.menu {
+  border-radius: 15px;
+  background-color: whitesmoke;
+  margin-left: 150px;
+  padding: 10px 4px 4px 16px;
 }
 
+.slides {
+  display: flex;
+  /* background-color: #789edf; */
+  height: 450px;
+  align-items: center;
+  background-color: transparent;
+  border: none;
+}
+
+#dots {
+  background-color: black;
+}
 
 .carousel-indicators {
-    bottom: -53px!important;
-    /* background-color: #134672; */
+  bottom: -53px !important;
+  /* background-color: #134672; */
 }
 
-.carousel-control-next-icon, .carousel-control-prev-icon{
-    display: none;
+.carousel-control-next-icon,
+.carousel-control-prev-icon {
+  display: none;
 }
 
 img.client-img {
-    width: 70px;
-    border-radius: 35px;
-    height: 72px;
-    border: 5px solid #fff;
+  width: 70px;
+  border-radius: 35px;
+  height: 72px;
+  border: 5px solid #fff;
 }
 
 .card-body-temp {
-    width: 550px;
-    height: 234px;
-    display: flex;
-    padding: 40px 40px;
-    flex-direction: column;
-    text-align: justify;
-    margin: 85px auto;
-    border-radius: 5px;
-    background-color: whitesmoke;
+  width: 550px;
+  height: 234px;
+  display: flex;
+  padding: 40px 40px;
+  flex-direction: column;
+  text-align: justify;
+  margin: 85px auto;
+  border-radius: 5px;
+  background-color: whitesmoke;
 }
 
-
 i.fa-quote-left {
-    position: relative;
-    top: -8px;
-    left: -2px;
-    font-size: 22px;
-    color: hotpink;
+  position: relative;
+  top: -8px;
+  left: -2px;
+  font-size: 22px;
+  color: hotpink;
 }
 
 i.fa-quote-right {
-    position: relative;
-    left: 2px;
-    top: -7px;
-    font-size: 22px;
-    color: hotpink;
+  position: relative;
+  left: 2px;
+  top: -7px;
+  font-size: 22px;
+  color: hotpink;
 }
 
-/* .client-img-container {
-    position: absolute;
-    left: 40px;
-} */
+.fa-angles-down {
+  font-size: 40px;
+}
+
+.pink {
+  color: hotpink;
+  font-size: 25px;
+}
+
+#buton {
+  text-align: center;
+}
+
+.nav-pills .nav-link.active,
+.nav-pills .show > .nav-link {
+  color: hotpink;
+  background-color: transparent;
+}
+
+.nav-pills {
+  border-radius: 35px;
+  background-color: white;
+}
+
+.portfolio-tab {
+  width: 30%;
+}
+
+.btn {
+  background: hotpink;
+  border: none;
+  border-radius: 40px;
+  padding: 8px 16px;
+}
+.btn:hover,
+.btn-primary:not(:disabled):not(.disabled):active {
+  background: hotpink;
+  border: none;
+}
+
+.card-img {
+  width: 100px;
+  border-radius: 50px;
+  height: 100px;
+  position: relative;
+  margin: 40px 0 0 60px;
+}
+
+.card.w-100.text-center {
+  box-shadow: 1px 2px 5px #aba7a7;
+}
